fix desktop scrollbars to more closely match browsers that support overlay scrollbars

--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -570,9 +570,6 @@ a {
     width: 100%;
     overflow-y: auto;
     display: grid;
-    &::-webkit-scrollbar-track {
-        background-color: white;
-    }
 }
 
 #tasks-table {
