--- a/web/ui-elements/notification-popover.css
+++ b/web/ui-elements/notification-popover.css
@@ -73,15 +73,6 @@
         width: 100%;
         padding-bottom: 10px;
 
-        &::-webkit-scrollbar-track {
-            background-color: white;
-            width: 6px;
-            
-        }
-        &::-webkit-scrollbar-thumb {
-            background-color: #ddd;
-        }
-
     }
 
     .time {
